--- a/index-5.html
+++ b/index-5.html
@@ -7,7 +7,7 @@
       	<meta property="og:site_name" content="Sinco">
       	<meta property="og:url" content="https://heloshape.com/">
       	<meta property="og:type" content="website">
-      	<meta property="og:title" content="Sinco - Data Science & Analytics HTML5 Template">
+      	<meta property="og:title" content=" Science & Analytics HTML5 Template">
 		<meta name='og:image' content='images/assets/ogg.png'>
 		<!-- For IE -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
